# olaw

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  wsgi.py
olaw/: __init__.py
olaw/search_targets/: __init__.py  courtlistener.py
olaw/static/: index.css  state.js
olaw/static/components/: ChatBubble.css  ChatBubble.js  ChatFlow.css  ChatFlow.js  InspectDialog.js  SettingsDialog.js
olaw/templates/: index.html
olaw/utils/: check_env.py  list_available_models.py
olaw/views/: __init__.py  ui.py
olaw/views/api/: __init__.py  complete.py  extract_search_statement.py  models.py  search.py
open_legal_rag/: __init__.py  data_formats.py  search_targets.py
open_legal_rag/commands/: __init__.py  ingest.py
open_legal_rag/const/: __init__.py
open_legal_rag/static/: _index.js  index.css  index.js  state.js
open_legal_rag/static/components/: ChatBubble.css  ChatBubble.js  ChatFlow.css  ChatFlow.js  ChatInput.css  ChatInput.js  InspectDialog.css  InspectDialog.js  SettingsDialog.css  SettingsDialog.js
open_legal_rag/templates/: index.html
open_legal_rag/utils/: check_env.py  list_available_models.py
open_legal_rag/views/: __init__.py  api.py  ui.py
open_legal_rag/views/api/: __init__.py  complete.py  extract_search_statement.py  models.py  search.py
