[tool.poetry]
authors = ["Harvard Library Innovation Lab"]
description = ""
license = "MIT"
name = "open-legal-rag"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
click = "^8.1.7"
flask = "^3.0.0"
litellm = "^1.10.4"
python = "^3.11"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 100
